# Myfavor

./: .env  .gitignore  db.sqlite3  pyproject.toml
accounts/: managers.py  models.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_type.py  0002_rename_categories_category.py  0003_category_name.py  0004_alter_category_name.py  0005_alter_category_name.py  0006_alter_category_name.py  0007_alter_category_options_remove_category_name_and_more.py  0008_alter_category_type.py  0009_alter_category_type.py  0010_category_title.py  0011_alter_category_title.py  0012_remove_category_title.py
common/: models.py
config/: authentication.py  permissions.py  settings.py  urls.py
idols/: admin.py  models.py  serializers.py  urls.py  views.py
idols/migrations/: 0001_initial.py  0002_alter_schedule_when.py  0002_schedule_idol_category_remove_idol_idol_schedule_and_more.py  0003_alter_schedule_when.py  0003_remove_idol_category.py  0004_alter_schedule_options.py  0004_alter_schedule_when.py  0004_remove_schedule_schedulecontent_alter_schedule_when.py  0005_alter_schedule_when.py  0005_schedule_type.py  0006_alter_schedule_when.py  0006_remove_schedule_type.py  0007_alter_schedule_when.py  (+80 more)
media/: admin.py  models.py  serializers.py  urls.py  views.py
times/: models.py
token/: jwt_token.py  token_auth.py
users/: JWTViews.py  admin.py  models.py  serializers.py  urls.py  views.py
usersCalendar/: admin.py  models.py  serializers.py  urls.py  views.py  views_board.py
(+45 files in other folders)
